--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./styles/style.css">
-   <title>Document</title>
+   <link rel="shortcut icon" href="./styles/icons/premium-icon-buttons-3292153.png" type="image/x-icon">
+   <title>Virtual-Keyboard</title>
 </head>
 
 <body>
-  
    <script src="js/script.js" type="module"></script>
 </body>
 
